calico/hosts-default-deny.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  selector: has(kubernetes-host)
  types:
  - Ingress
  - Egress
