calico/hosts-global-network-policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: k8s-hosts
spec:
  selector: has(kubernetes-host)
  ingress:
  # Allow all traffic to localhost
  - action: Allow
    destination:
      nets:
      - 127.0.0.0/8
  egress:
  # Allow egress to Internet
  - action: Allow
    destination:
      notNets:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
  # Allow all traffic to localhost
  - action: Allow
    destination:
      nets:
      - 127.0.0.0/8
  # Allow traffic to NAS
  - action: Allow
    destination:
      nets:
      - 172.16.20.16/32
