calico/master-nodes-default-deny.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  selector: has(node-role.kubernetes.io/master)
  types:
  - Ingress
  - Egress
